--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^10.0"
+        "php": "^7.4|^8.0"
     },
     "authors": [
         {
